--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ button {
   transition: all 0.25s ease;
 }
 
-/* YES BUTTON */
+/* YES */
 .yes {
   background: #ff1e56;
   color: white;
@@ -71,19 +71,19 @@ button {
   100% { box-shadow: 0 0 0 0 rgba(255,30,86,0); }
 }
 
-/* EXTRA BIG IN STAGE 3 */
+/* BIG DRAMATIC YES */
 .stage3-yes {
   font-size: 22px;
-  animation: crazyPulse 1s infinite;
+  animation: dramaticPulse 1.1s infinite;
 }
 
-@keyframes crazyPulse {
-  0% { transform: translateX(-50%) scale(1.2); }
-  50% { transform: translateX(-50%) scale(1.5); }
-  100% { transform: translateX(-50%) scale(1.2); }
+@keyframes dramaticPulse {
+  0% { transform: translateX(-50%) scale(1.2); box-shadow: 0 0 15px #ff1e56; }
+  50% { transform: translateX(-50%) scale(1.5); box-shadow: 0 0 45px #ff1e56; }
+  100% { transform: translateX(-50%) scale(1.2); box-shadow: 0 0 15px #ff1e56; }
 }
 
-/* NO BUTTON */
+/* NO */
 .no {
   background: #333;
   color: white;
@@ -92,7 +92,7 @@ button {
   transform: translateX(-50%) scale(1);
 }
 
-/* HEARTS (MORE CHAOTIC) */
+/* HEARTS */
 .heart {
   position: fixed;
   bottom: -20px;
@@ -104,11 +104,11 @@ button {
 }
 
 @keyframes floatUp {
-  from { transform: translateY(0); opacity: 1; }
+  from { transform: translateY(0) rotate(0deg); opacity: 1; }
   to { transform: translateY(-110vh) rotate(360deg); opacity: 0; }
 }
 
-/* FINAL OVERLAY */
+/* FINAL SCREEN */
 #finalOverlay {
   position: fixed;
   inset: 0;
@@ -129,13 +129,14 @@ button {
 }
 
 #lovePhoto {
-  width: 360px;
+  width: 380px;
+  max-width: 90%;
   border-radius: 20px;
-  box-shadow: 0 25px 80px rgba(0,0,0,0.6);
+  box-shadow: 0 30px 90px rgba(0,0,0,0.7);
 }
 
 #finalText {
-  margin-top: 20px;
+  margin-top: 25px;
   color: white;
   font-size: 18px;
 }
@@ -154,6 +155,7 @@ button {
 </div>
 
 <div id="finalOverlay">
+  <!-- IMPORTANT: Make sure filename matches EXACTLY -->
   <img id="lovePhoto" src="forever.png" alt="Forever">
   <div id="finalText">Hereafter, Vaishnavi Alur, you're my forever.</div>
 </div>
@@ -174,7 +176,7 @@ const card = document.getElementById("card");
 const finalOverlay = document.getElementById("finalOverlay");
 const bgMusic = document.getElementById("bgMusic");
 
-/* MORE HEARTS */
+/* LOTS OF HEARTS */
 function createHeart() {
   const heart = document.createElement("div");
   heart.className = "heart";
@@ -211,6 +213,7 @@ yesBtn.addEventListener("click", () => {
   if (stage === 1) {
     stage = 2;
     question.textContent = "Like… forever forever? 👀";
+
     noBtn.style.left = "50%";
     noBtn.style.top = "15px";
     noBtn.style.transform = "translateX(-50%) scale(1)";
@@ -228,6 +231,7 @@ yesBtn.addEventListener("click", () => {
 
     bgMusic.volume = 0;
     bgMusic.play().catch(() => {});
+
     card.style.opacity = "0";
 
     setTimeout(() => {
